--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <title>Jenkins CI/CD Pipeline</title>
 <body>
-<h1> Welcome to Ibuy </h1>
+<h1> Welcome to the youtube channel of Ibuy </h1>
 </body>
 </html>
